# SuperGrok1.5

./: .gitignore  ANALYSIS.md  README.md  grokking_race_v2.py  pyproject.toml  setup.py
benchmarks/: autotune.py  benchmark_supergrok2.py  training_benchmark.py
codegen/: generate_kernels.py  generate_sg2_kernels.py  kernel_specs.yaml
codegen/templates/: common_macros.j2
csrc/: looksam_kernels.cu  ops.cpp  supergrok2_mamba_peer_backward_kernels.cu
csrc/common/: dispatch.h  ops.cpp  ops.h  platform.h  ptx_intrinsics.cuh  quantization.h  types.h  utils.cuh
csrc/cpu/: cpu_kernels.cpp  cpu_ops.cpp  distributed_scan_cpu.cpp  moe_cpu.cpp  sg2_fused_scan_elem_cpu.cpp
csrc/cpu/avx512/: simd_kernels.cpp
csrc/cpu/generic/: all_optimizers_cpu.cpp  supergrok2_scan_cpu.cpp
csrc/cpu/neon/: simd_kernels.cpp
csrc/cuda/generic/: distributed_pipeline.cu  distributed_scan_kernels.cu  distributed_scan_pipeline.cu  grokadamw_kernels.cu  grokfast_kernels.cu  lion_kernels.cu  looksam_kernels.cu  moe_deep_kernels.cu  multi_tensor_optimizer_kernels.cu  multi_tensor_prepare.cu  muon_kernels.cu  neuralgrok_kernels.cu  prodigy_kernels.cu  supergrok11_kernels.cu  supergrok15_kernels.cu  supergrok2_mamba_peer_backward_kernels.cu  supergrok2_mamba_peer_kernels.cu
csrc/cuda/sm_100/: supergrok2_precompute_sm100.cu  supergrok2_scan_sm100.cu  supergrok2_sm100.cu
csrc/cuda/sm_80/: metanet_cpasync_variants_sm80.cu  metanet_optimizers_sm80.cu  muon_sm80.cu  supergrok2_backward_sm80.cu  supergrok2_fused_elem_sm80.cu  supergrok2_scan_sm80.cu
csrc/cuda/sm_90/: metanet_optimizers_sm90.cu  muon_sm90.cu  supergrok2_backward_sm90.cu  supergrok2_scan_sm90.cu  supergrok2_warp_specialized_sm90.cu
csrc/hip/: README_HIP.md
csrc/hip/cdna2/: supergrok2_scan_cdna2.hip.cpp
csrc/hip/cdna3/: metanet_optimizers_cdna3.hip.cpp  muon_cdna3.hip.cpp  supergrok2_cdna3.hip.cpp
csrc/hip/cdna4/: cdna4_kernels.hip.cpp
csrc/quantization/: quantization_kernels.cu
grokking_optimizers/: __init__.py  _adamw_helper.py  _ops_loader.py  _python_fallback.py  async_supergrok2.py  cuda_graph_optimizer.py  dispatch.py  distributed.py  distributed_scan.py  gradient_compression.py  gradient_hook_optimizer.py  grokadamw.py  grokfast.py  interleaved_states.py  jit_kernels.py  lion.py  looksam.py  mamba3_peer_metanet.py  moe_deep.py  muon.py  neuralgrok.py  overlap_distributed.py  partial_graph.py  pipelined_optimizer.py  prodigy.py  quantization.py  sparse_gradients.py  supergrok11.py  supergrok15.py  supergrok2.py  torch_compile_integration.py
grokking_optimizers/jit/: __init__.py  block_size_optimizer.py  cpu_specializer.py  cuda_specializer.py  gcn_scheduler.py  hip_specializer.py  multi_gpu_optimizer.py  ptx_scheduler.py  smem_layout.py  specializer.py  tpu_specializer.py
grokking_optimizers/jit/templates/cpu/: fused_scan_elem.cpp.j2
grokking_optimizers/jit/templates/cuda/: distributed_kernel.cu.j2  fused_elem_kernel.cu.j2  persistent_kernel.cu.j2  scan_kernel.cu.j2
grokking_race_package/: ANALYSIS.md  README.md  grokking_race_v2.py  mamba_scan_kernel.cu  test_supergrok2.py
grokking_race_package/grokking_optimizers/: setup.py
grokking_race_package/grokking_optimizers/csrc/: grokadamw_kernels.cu  grokfast_kernels.cu  lion_kernels.cu  muon_kernels.cu  neuralgrok_kernels.cu  ops.cpp  ops.h  prodigy_kernels.cu  supergrok11_kernels.cu  supergrok15_kernels.cu  supergrok2_isab_peer_kernels.cu  supergrok2_kernels.cu  supergrok2_mamba_peer_backward_kernels.cu  supergrok2_mamba_peer_kernels.cu
grokking_race_package/grokking_optimizers/grokking_optimizers/: __init__.py  cuda_graph_optimizer.py  grokadamw.py  grokfast.py  isab_peer_metanet.py  lion.py  looksam.py  mamba3_peer_metanet.py  muon.py  neuralgrok.py  prodigy.py  supergrok11.py  supergrok15.py  supergrok2.py
grokking_race_package/supergrok15_cpp/: CMakeLists.txt  pyproject.toml  setup.py  tests.py
grokking_race_package/supergrok15_cpp/csrc/: graph_compiler.cpp  graph_compiler.h  grokfast_kernels.cu  kernels.cu  lion_kernels.cu  looksam_kernels.cu  models.h  muon_kernels.cu  ops.cpp  ops.h  stream_scheduler.cpp  stream_scheduler.h  train.cpp
grokking_race_package/supergrok15_cpp/supergrok15_cpp/: __init__.py  optim.py
grokking_race_package/supergrok_v1_5/: pyproject.toml  tests.py
grokking_race_package/supergrok_v1_5/supergrok15/: __init__.py  supergrok15.py
supergrok2_jax_tpu/: __init__.py  bilevel.py  bridge.py  distributed_example.py  gru.py  mamba3_peer_metanet_jax.py  metanet_optimizers_jax.py  pallas_kernels.py  peer.py  quantization_jax.py  scan.py  sharding.py  simple_optimizers_jax.py  supergrok2_jax.py
supergrok2_jax_tpu/tests/: test_supergrok2_jax.py
tests/: test_all_tiers.py  test_amd_hip.py  test_cpu_fallback.py  test_jax_matrix.py  test_matrix.py  test_new_features.py  test_supergrok2.py  test_training_aware.py
