[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grokking-optimizers"
version = "2.1.0"
description = "C++/CUDA/HIP/JAX optimizer suite with SuperGrok v2 (Mamba-3 + PEER + GRU meta-net)"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
dependencies = ["torch>=2.0.0"]

[project.optional-dependencies]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0"]
test = ["pytest", "numpy"]

[project.urls]
Homepage = "https://github.com/peterc04/SuperGrok1.5"
