[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supergrok15"
version = "1.5.0"
description = "Sharpness-aware grokking optimizer — LookSAM + 2D meta-net + progressive weight decay for low-data generalization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Peter C."}
]
keywords = [
    "deep-learning", "optimizer", "pytorch", "grokking",
    "generalization", "sharpness-aware", "sam", "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=1.13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/peterc04/SuperGrok"
Repository = "https://github.com/peterc04/SuperGrok"

[tool.setuptools.packages.find]
where = ["."]
include = ["supergrok15*"]
